index.html and app.js init

--- a/src/index.html
+++ b/src/index.html
@@ -15,14 +15,33 @@
 <head>
     <meta charset="UTF-8">    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NodeJS_Sablon</title>
+    <title>Gepida</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="bootstrap.css">
 </head>
 <body>
     
     <div class="container">
-        <h1>NodeJS_Sablon</h1>
+        <h1>Gepida lista</h1>
+
+        <thead>
+            
+            <tr>                
+                <th>Azonosító</th>
+                <th>Név</th>
+                <th>Kerék</th>
+                <th>Használat</th>
+                <th>Ár</th>
+            </tr>
+        </thead>        
+        <tbody id = "tbody"></tbody>
+    </table>
+
+    </div>
+
+
+    <div id = "about">
+        © Király Péter, SZOFT-1-2-E, 2023-03-05
     </div>
 
     <script src="app.js"></script>
