--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,10 @@
 
     </div>
 
+    <div id = "quote" class="blockquote text-center my-5">
+        <p>"A tanítás olyan, mint a fotoszintézis: levegőből és fényből készülő táplálék. Kissé más szemmel lehet látni tőle az élet esélyeit."<br /></p>
+        <p class="blockquote-footer">(<a href="https://www.citatum.hu/szerzo/Richard_Powers">Richard Powers</a>)</p>
+    </div>
 
     <div id = "about">
         © Király Péter, SZOFT-1-2-E, 2023-03-05
