more style added

--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,8 @@
 <body>
     
     <div class="container">
-        <h1>Gepida lista</h1>
-        <table class="table table-striped">
+        <h1 class="my-5">Gepida lista</h1>
+        <table class="table table-striped-columns">
             <thead>
                 
                 <tr>                
